Iff the field "Throwable.message" cannot be made accessible, print a useful warning message on STDERR instead of throwing an exception.